<resources>
    <string name="app_name">Food</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Developer">Olatubosun Daniel</string>
    <string name="slogan">Eat cheap and healthy</string>
    <string name="signIn_email">sign in with email</string>
    <string name="signIn_phone">sign in with phone</string>
    <string name="signUp">sign up</string>
    <string name="option">OR</string>
    <string name="caption">Find homemade food around you or offer your own!</string>
    <string name="courier">connect as courier</string>
    <string name="customer">connect as customer</string>
    <string name="chef">connect as chef</string>

    <string-array name="state">
        <item> Oyo </item>
        <item> Osun </item>
        <item> Lagos </item>
        <item> Ibadan </item>
    </string-array>

    <string-array name="courier">
        <item>Courier 1</item>
        <item>Courier 2</item>
        <item>Courier 3</item>
    </string-array>

    <string-array name="dish_name">
        <item>Rice</item>
        <item>Beans</item>
        <item>Spaghetti</item>
        <item>Salad</item>
        <item>Hamburgers</item>
        <item>Yam</item>
        <item>Amala</item>
    </string-array>
    <string name="title_activity_cou_registration">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email Id</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="home_street_no">Home/Street no</string>
    <string name="mobile_no">Mobile No</string>


</resources>