<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseOne">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back8"
        android:layout_width="match_parent"
        android:layout_height="750dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg8"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bgwhite">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:padding="5dp"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chef"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/chef"
            android:background="@color/orange"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/customer"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:background="@color/orange"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/courier"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/courier"
            android:background="@color/orange"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>