<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/food" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:background="@drawable/bgwhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="60sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/slogan"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnred"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/signIn_email"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn_phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnblue"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/signIn_phone"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TableRow
                android:id="@+id/hr"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TableRow
                android:id="@+id/dr"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:background="@color/black" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btngreen"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/signUp"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>