<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    tools:context=".Couloginemail">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/bgwhite">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Demail">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgwhite"
                android:drawableStart="@drawable/ic_black_email"
                android:drawablePadding="10dp"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Dpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgwhite"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotpass"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="Forgot password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btngreen"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:gravity="center"
            android:text="Don't have an account? Create one"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TableRow
                android:id="@+id/hr"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TableRow
                android:id="@+id/dr"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:background="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signphone"
            android:gravity="center"
            android:text="SignIn With"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Dbtnphone"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/btnblue"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="Phone"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>